# abode

./: .gitignore  README.md  image_remover.py  pyproject.toml  streamlit_app.py  style_image_downloader.py
image_evaluation_results/: image_evaluation_results_20250404-123302.json
room_styles/: styles.json
room_styles/art_deco_glamour/: Art_Deco_10099090.txt  Art_Deco_10726947.txt  Art_Deco_11013073.txt  Art_Deco_14381699.txt  Art_Deco_15129761.txt  Art_Deco_15262028.txt  Art_Deco_15515654.txt  Art_Deco_17097899.txt  Art_Deco_17208974.txt  Art_Deco_1828524.txt  Art_Deco_20116591.txt  Art_Deco_20527043.txt  Art_Deco_21629418.txt  Art_Deco_22601519.txt  Art_Deco_22863605.txt  Art_Deco_26267918.txt  Art_Deco_28644738.txt  Art_Deco_29720535.txt  Art_Deco_29820843.txt  Art_Deco_30693930.txt  Art_Deco_3843382.txt  Art_Deco_5312891.txt  Art_Deco_5654758.txt  Art_Deco_6224381.txt  Art_Deco_6224622.txt  Art_Deco_6224643.txt  Art_Deco_6224644.txt  Art_Deco_6404194.txt  Art_Deco_675939.txt  Art_Deco_6923539.txt  Art_Deco_7035356.txt  Art_Deco_7035444.txt  Art_Deco_7061058.txt  Art_Deco_7875217.txt  Art_Deco_8164389.txt  Art_Deco_9209790.txt  Art_Deco_9430580.txt  Art_Deco_9821466.txt  description.txt
room_styles/bohemian_eclectic/: Bohemian_10200542.txt  Bohemian_10229946.txt  Bohemian_11193411.txt  Bohemian_11528216.txt  Bohemian_12102802.txt  Bohemian_1253951.txt  Bohemian_12933002.txt  Bohemian_13154942.txt  Bohemian_15124841.txt  Bohemian_15245658.txt  Bohemian_15362788.txt  Bohemian_15535517.txt  Bohemian_17331180.txt  Bohemian_19019600.txt  Bohemian_19451315.txt  (+28 more)
(+497 files in other folders)
