[tool.poetry]
name = "room-decorator"
version = "0.1.0"
description = "Generate furniture suggestions based on room images"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.9,<3.9.7 || >3.9.7,<4.0"
python-dotenv = "^1.0.0"
openai = "^1.3.0"
Pillow = "^10.0.0"
requests = "^2.31.0"
tk = "^0.1.0"  # For Tkinter
selenium = "^4.10.0"  # For web scraping
webdriver-manager = "^3.8.5"  # For Chrome driver management
streamlit = "^1.32.0"  # For web interface

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api" 